# kwin-effects-yet-another-magic-lamp-kde-6

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  YetAnotherMagicLampEffect.cc  YetAnotherMagicLampEffect.h  metadata.json
src/kcm/: CMakeLists.txt  metadata.json
