add_subdirectory(kcm)

set(effect_SRCS
    Model.cc
    YetAnotherMagicLampEffect.cc
    plugin.cc
)

kconfig_add_kcfg_files(effect_SRCS
    YetAnotherMagicLampConfig.kcfgc
)

add_library(kwin4_effect_yetanothermagiclamp SHARED ${effect_SRCS})

target_link_libraries(kwin4_effect_yetanothermagiclamp
    Qt6::Core
    Qt6::Gui
    KF6::ConfigCore
    KF6::ConfigGui
    KF6::CoreAddons
    KF6::WindowSystem
    KWinEffects::kwin_effects
    KWinEffects::kwin_opengl
    epoxy::epoxy
)

install(
    TARGETS
        kwin4_effect_yetanothermagiclamp

    DESTINATION
        ${PLUGIN_INSTALL_DIR}/kwin/effects/plugins/
)
